<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>859</width>
    <height>620</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="ui_win">
   <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="0">
    <item>
     <layout class="QVBoxLayout" name="ui_imag_reco" stretch="5,1">
      <property name="spacing">
       <number>7</number>
      </property>
      <property name="sizeConstraint">
       <enum>QLayout::SetDefaultConstraint</enum>
      </property>
      <property name="leftMargin">
       <number>1</number>
      </property>
      <property name="topMargin">
       <number>1</number>
      </property>
      <property name="rightMargin">
       <number>1</number>
      </property>
      <property name="bottomMargin">
       <number>1</number>
      </property>
      <item>
       <layout class="QHBoxLayout" name="ui_ctrl" stretch="1,4">
        <property name="spacing">
         <number>5</number>
        </property>
        <item>
         <layout class="QVBoxLayout" name="ui_ctrl_flow">
          <item>
           <widget class="QToolBox" name="ui_flow">
            <property name="layoutDirection">
             <enum>Qt::LeftToRight</enum>
            </property>
            <property name="currentIndex">
             <number>0</number>
            </property>
            <widget class="QWidget" name="ui_flow_cnt">
             <property name="geometry">
              <rect>
               <x>0</x>
               <y>0</y>
               <width>164</width>
               <height>309</height>
              </rect>
             </property>
             <attribute name="label">
              <string>通信协议</string>
             </attribute>
             <widget class="QPushButton" name="ui_uart">
              <property name="geometry">
               <rect>
                <x>10</x>
                <y>10</y>
                <width>89</width>
                <height>24</height>
               </rect>
              </property>
              <property name="text">
               <string>串口通信</string>
              </property>
             </widget>
             <widget class="QPushButton" name="ui_net">
              <property name="geometry">
               <rect>
                <x>10</x>
                <y>40</y>
                <width>89</width>
                <height>24</height>
               </rect>
              </property>
              <property name="text">
               <string>网口通信</string>
              </property>
             </widget>
             <widget class="QProgressBar" name="ui_net_spd">
              <property name="geometry">
               <rect>
                <x>110</x>
                <y>40</y>
                <width>51</width>
                <height>23</height>
               </rect>
              </property>
              <property name="maximum">
               <number>1000</number>
              </property>
              <property name="value">
               <number>0</number>
              </property>
             </widget>
             <widget class="QProgressBar" name="ui_uart_spd">
              <property name="geometry">
               <rect>
                <x>110</x>
                <y>10</y>
                <width>51</width>
                <height>23</height>
               </rect>
              </property>
              <property name="value">
               <number>0</number>
              </property>
             </widget>
            </widget>
            <widget class="QWidget" name="ui_flow_load">
             <property name="geometry">
              <rect>
               <x>0</x>
               <y>0</y>
               <width>164</width>
               <height>309</height>
              </rect>
             </property>
             <attribute name="label">
              <string>数据加载</string>
             </attribute>
             <widget class="QPushButton" name="ui_file_load">
              <property name="geometry">
               <rect>
                <x>20</x>
                <y>50</y>
                <width>89</width>
                <height>24</height>
               </rect>
              </property>
              <property name="text">
               <string>文件加载</string>
              </property>
             </widget>
            </widget>
            <widget class="QWidget" name="ui_flow_solve">
             <property name="geometry">
              <rect>
               <x>0</x>
               <y>0</y>
               <width>164</width>
               <height>309</height>
              </rect>
             </property>
             <attribute name="label">
              <string>数据处理</string>
             </attribute>
             <widget class="QPushButton" name="ui_signal">
              <property name="geometry">
               <rect>
                <x>20</x>
                <y>20</y>
                <width>89</width>
                <height>24</height>
               </rect>
              </property>
              <property name="text">
               <string>信号转存</string>
              </property>
             </widget>
             <widget class="QPushButton" name="ui_file_save">
              <property name="geometry">
               <rect>
                <x>20</x>
                <y>60</y>
                <width>89</width>
                <height>24</height>
               </rect>
              </property>
              <property name="text">
               <string>文件转存</string>
              </property>
             </widget>
            </widget>
            <widget class="QWidget" name="ui_imag_result">
             <property name="geometry">
              <rect>
               <x>0</x>
               <y>0</y>
               <width>164</width>
               <height>309</height>
              </rect>
             </property>
             <attribute name="label">
              <string>数据显示</string>
             </attribute>
             <widget class="QPushButton" name="ui_chart">
              <property name="geometry">
               <rect>
                <x>20</x>
                <y>20</y>
                <width>89</width>
                <height>24</height>
               </rect>
              </property>
              <property name="text">
               <string>坐标显示</string>
              </property>
             </widget>
             <widget class="QPushButton" name="ui_imag">
              <property name="geometry">
               <rect>
                <x>20</x>
                <y>60</y>
                <width>89</width>
                <height>24</height>
               </rect>
              </property>
              <property name="text">
               <string>图像显示</string>
              </property>
             </widget>
            </widget>
           </widget>
          </item>
         </layout>
        </item>
        <item>
         <layout class="QHBoxLayout" name="ui_show" stretch="0">
          <item>
           <layout class="QVBoxLayout" name="ui_show_1">
            <item>
             <layout class="QGridLayout" name="ui_show_2">
              <item row="2" column="0">
               <widget class="QTabWidget" name="ui_display">
                <property name="currentIndex">
                 <number>0</number>
                </property>
                <widget class="QWidget" name="tab">
                 <attribute name="title">
                  <string>Tab 1</string>
                 </attribute>
                </widget>
                <widget class="QWidget" name="tab_2">
                 <attribute name="title">
                  <string>Tab 2</string>
                 </attribute>
                </widget>
               </widget>
              </item>
             </layout>
            </item>
           </layout>
          </item>
         </layout>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QHBoxLayout" name="ui_info">
        <item>
         <widget class="QTextBrowser" name="ui_info_log"/>
        </item>
       </layout>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>859</width>
     <height>25</height>
    </rect>
   </property>
   <widget class="QMenu" name="menufile">
    <property name="title">
     <string>文件</string>
    </property>
   </widget>
   <widget class="QMenu" name="menumode">
    <property name="title">
     <string>模式</string>
    </property>
   </widget>
   <widget class="QMenu" name="menuconnect">
    <property name="title">
     <string>链接</string>
    </property>
   </widget>
   <widget class="QMenu" name="menuparameter">
    <property name="title">
     <string>参数</string>
    </property>
    <addaction name="actionnet"/>
   </widget>
   <widget class="QMenu" name="menuhelp">
    <property name="title">
     <string>帮助</string>
    </property>
   </widget>
   <addaction name="menufile"/>
   <addaction name="menumode"/>
   <addaction name="menuconnect"/>
   <addaction name="menuparameter"/>
   <addaction name="menuhelp"/>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <widget class="QToolBar" name="toolBar">
   <property name="windowTitle">
    <string>toolBar</string>
   </property>
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
  </widget>
  <action name="actionnet">
   <property name="text">
    <string>网口</string>
   </property>
  </action>
 </widget>
 <resources/>
 <connections/>
</ui>
